# rcli

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: rcli.cpp  rcli.h
test/: main.cpp  opt_parser.h  redis_test.h
